--- a/website/static/scss/pages/_default.scss
+++ b/website/static/scss/pages/_default.scss
@@ -109,7 +109,5 @@ main > * {
 
 }
 @media screen and (min-width: $bp-xlarge) {
-  body {
-    max-width: 1500px;
-  }
+
 }
